css/default.css
/* ... */
.Liberty .login-modal .modal-checkbox:not(#noop) input[type='checkbox']+label:hover::before {
	border: 3px solid #777;
}

.Liberty .login-modal .modal-checkbox:not(#noop) input[type='checkbox']:checked+label::before {
	border: 3px solid #777;
	background-image: linear-gradient( transparent, transparent ), url( data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M4%2012l5%205L20%205%22%20stroke%3D%22%2300B78C%22%20stroke-width%3D%223%22%20fill%3D%22none%22%2F%3E%3C%2Fsvg%3E%0A );
}

.Liberty .login-modal .btn {
	margin-bottom: 0.8rem;
}

.Liberty .login-modal .modal-footer {
	display: none;
}
/* Login model End */

/* Bootstrap Custom */
.dropdown-menu {
	font-size: 0.95rem;
	box-shadow: 0 6px 12px rgba( 0, 0, 0, .175 );
	border-color: #e1e8ed;
}

.dropdown-menu .dropdown-item:hover {
	color: #fff;
	transition: 0.3s;
}

.dropdown-divider {
	border-color: #e1e8ed;
}

.form-control {
	font-size: 0.9rem;
}

.form-control:focus {
	border-color: #66afe9;
	outline: 0;
	box-shadow: inset 0 1px 1px rgba( 0, 0, 0, .075 ), 0 0 8px rgba( 102, 175, 233, .6 );
	transition: 0.3s;
}

.btn {
	box-shadow: none;
	border-radius: 0.35rem;
}

.btn:hover {
	transition: 0.3s;
}

.btn:active,
.btn:focus {
	outline: 0;
}

.input-group-btn:last-child > .btn,
.input-group-btn:last-child > .btn-group {
	z-index: 3; /* Firefox, IE border bug fix */
}

.close:focus,
.close:hover {
	transition: 0.3s;
}

caption {
	color: #373a3c;
	caption-side: top;
}
/* Bootstrap Custom End */

/* AdSense */
ins.adsbygoogle {
	display: block;
	width: 100%;
	height: 90px;
}

.header-ads > ins {
	min-width: 20rem;
}

.right-ads > ins {
	min-width: 15rem;
}
/* AdSense End */

/* Echo */
.mw-echo-ui-overlay {
	z-index: 10000 !important;
}

#pt-notifications-alert {
	position: relative;
	float: right;
	list-style: none;
	top: 0.8rem;
	font-size: 0.9rem;
	margin-right: 0.6rem;
	margin-left: 0.8rem;
}
/* Echo End */

